k8s-manifests/redirect-https.yaml

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: default              
spec:
  redirectScheme:
    scheme: https
    permanent: true
