k8s-manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: skill-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skill-tracker
  template:
    metadata:
      labels:
        app: skill-tracker
    spec:
      containers:
      - name: app
        image: simon6620/skill-tracker:1.0.0  
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: skill-tracker
spec:
  selector:
    app: skill-tracker
  ports:
  - port: 5001
    targetPort: 5001
